.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Request_Schedule__c.object
<CustomObject>
    <description>Junction object to support the many-to-many relationship between Service Requests and Cases</description>
    <fields>
        <fullName>Incap311__Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancelled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Number_Of_Items__c</fullName>
        <label>Number Of Items</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>Incap311__Schedule__c</referenceTo>
        <relationshipLabel>Service Request Schedules</relationshipLabel>
        <relationshipName>Service_Request_Schedules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Request__c</fullName>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Request Schedules</relationshipLabel>
        <relationshipName>Service_Request_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Service Request Schedule</label>
    <nameField>
        <displayFormat>SRS-{00000000}</displayFormat>
        <label>Service Request Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>